fix visual glitches on mobile version

--- a/src/stylesheets/emojis-weather-map.scss
+++ b/src/stylesheets/emojis-weather-map.scss
@@ -24,6 +24,10 @@
       .emoji {
         display: inline-block;
         opacity: 0.5;
+
+        @include media-breakpoint-down(sm) {
+          font-size: 2.5rem;
+        }
       }
     }
   }
